actualizacion Biografia.html
corrección de practica

--- a/Biografia.html
+++ b/Biografia.html
@@ -68,7 +68,7 @@
 <div class="grid-container">
    <div> <a href="/index.html"> pagina principal</a> </div> 
    <div> <a href="https://agenciadeaprendizaje.bue.edu.ar/"> cursos</a> </div>
-   <div> <a href="/Objetivos.html" target="_blank">nuestros objetivos</a> </div>
+   <div> <a href="/objetivos.html" target="_blank">nuestros objetivos</a> </div>
 </div>
 
 </body>
