--- a/alumnos.html
+++ b/alumnos.html
@@ -73,6 +73,6 @@
 
 <h2><a href="/index.html" target="_blank"> pagina principal</a></h2>
 
-<h2><a href="/Objetivos.html" target="_blank"> ¿a quien esta dirigido?</a></h2>
+<h2><a href="/objetivos.html" target="_blank"> ¿a quien esta dirigido?</a></h2>
 </body>
 </html>
