actualización index.html
Corrección de Practica

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
         }
         p{
             text-align: center;
-        }
-        p{
             font-family: Arial, Helvetica, sans-serif;
+            color: beige;
         }
         h3{
             font-family:'Times New Roman', Times, serif;
@@ -24,12 +23,7 @@
         }
         h1{
             border-radius: 30px;
-        }
-        h1{
             border-style: solid;
-        }
-        p{
-            color: beige;
         }
     </style>
 </head>
@@ -70,7 +64,7 @@
     
     <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam accusamus quod optio nam impedit odit. Exercitationem, quos culpa nesciunt a sequi rerum natus dolorem autem aut provident modi quis. Recusandae.</P>
 
-    <h2><a href="/Biografia.html" target="_blank">trabajador ejemplar</a></h2>
-    <h2><a href="/Objetivos.html" target="_blank">nuestros objetivos</a></h2>
+    <h2><a href="/biografia.html" target="_blank">trabajador ejemplar</a></h2>
+    <h2><a href="/objetivos.html" target="_blank">nuestros objetivos</a></h2>
 </body>
 </html>
