Actualizado practica.1-3.html
Actualización de la practica 1-3

--- a/practica.1-3.html
+++ b/practica.1-3.html
@@ -9,11 +9,11 @@
 <body>
     <h1>PRACTICA</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, iure!</p>
-    <p class="grupo" id="parrafo">Provident hic sint earum enim est laboriosam quaerat labore. Culpa.</p>
-    <p>Tenetur numquam ullam provident minus! Placeat ex neque voluptate temporibus?</p>
-    <p>Aperiam ipsa ab facere in expedita eveniet ullam quae. Saepe?</p>
-    <p>Harum quia eligendi asperiores fuga, nobis necessitatibus error dolorem natus.</p>
-    <p>Cupiditate soluta culpa minima fuga porro odio necessitatibus vel tenetur!</p>
+    <p id="unico">Provident hic sint earum enim est laboriosam quaerat labore. Culpa.</p>
+    <p class="clave" id="promedio">Tenetur numquam ullam provident minus! Placeat ex neque voluptate temporibus?</p>
+    <p id="otro-unico">Aperiam ipsa ab facere in expedita eveniet ullam quae. Saepe?</p>
+    <p class="clave">Harum quia eligendi asperiores fuga, nobis necessitatibus error dolorem natus.</p>
+    <p id="mas-unico">Cupiditate soluta culpa minima fuga porro odio necessitatibus vel tenetur!</p>
 
 </body>
 </html>
