--- a/practica de iframe/index.html
+++ b/practica de iframe/index.html
@@ -16,13 +16,16 @@ Nulla illum praesentium reprehenderit. Accusantium omnis, itaque quos deserunt p
 Eius, quo et hic excepturi maiores distinctio quam necessitatibus ipsa nulla delectus assumenda iure quisquam ipsam totam ipsum ullam? Iusto aut dolores expedita ad veritatis perferendis minima quisquam nam error?
 Ut et repellat aspernatur esse dolore voluptatum voluptatibus quibusdam fuga quaerat beatae amet impedit pariatur commodi culpa voluptatem iusto rerum quam, cupiditate recusandae! Quaerat soluta et illo, harum molestias sapiente.</p>
 
-    <iframe src="https://agenciadeaprendizaje.bue.edu.ar/" frameborder="0"></iframe>
+    <iframe class="tamaño" src="https://agenciadeaprendizaje.bue.edu.ar/" frameborder="0"></iframe>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/lmB1DL9OX5A?si=BWdqt5RamfH4HMtv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe class="tamaño" width="560" height="315" src="https://www.youtube.com/embed/lmB1DL9OX5A?si=BWdqt5RamfH4HMtv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-    <iframe src="https://www.mercadolibre.com.ar/" frameborder="0"></iframe>
+    <iframe  class="grupo" src="https://www.mercadolibre.com.ar/" frameborder="0"></iframe>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/GbKwAT1r-xo?si=mxdW-mmCtCoVpFRe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe  class="grupo" width="560" height="315" src="https://www.youtube.com/embed/GbKwAT1 iframer-xo?si=mxdW-mmCtCoVpFRe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+    <iframe src="https://www.lanacion.com.ar/" frameborder="0"></iframe>
+
+    <iframe class="tamaño" width="560" height="315" src="https://www.youtube.com/embed/62R8B6s_5pE?si=7ZvhLdS5hpUCaeVy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
