--- a/mi pagina web (practica 1-0) (practica 1-1)/biografia.html
+++ b/mi pagina web (practica 1-0) (practica 1-1)/biografia.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi perfil (practica 1-2)</title>
+    <title>Mi Perfil (practica 1-2)</title>
     <style>
         body{
              width: 50%;
-             display: grid;
          }
          p{
              text-align: center;
@@ -20,14 +19,14 @@
              text-align: center;
              border-style: solid;
              box-sizing: border-box;
-             width: 59%;
+             width: 51%;
              background-color: aqua;
          }
          h3{
              color: brown;
              border-style: solid;
              box-sizing: border-box;
-             width: 59%;
+             width: 51%;
              padding: 2%;
              background-color: rgb(245, 188, 188);
              text-align: center;
@@ -44,7 +43,7 @@
      </style>
 </head>
 <body style="background-color: beige; width: 50%;">
-
+    
  <h1 style="color: blue;">PERFIL LABORAL</h1>
 
  <img 
@@ -72,6 +71,5 @@
    <div> <a href="https://agenciadeaprendizaje.bue.edu.ar/" target="_blank"> cursos</a> </div>
    <div> <a href="./objetivos.html" target="_blank">nuestros objetivos</a> </div>
  </div>
-
 </body>
 </html>
