--- a/biografia (practica 1-2)/index.html
+++ b/biografia (practica 1-2)/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mi pagina web (practica 1-1)</title>
     <style>
-        body{
+        .body{
             width: 50%;
             display: grid;
             justify-items: center;
