--- a/objetivos (practica 1-2)/alumnos.html
+++ b/objetivos (practica 1-2)/alumnos.html
@@ -12,7 +12,7 @@
             text-align: center;
             font-family: Arial, Helvetica, sans-serif;
         }
-        h1{
+        .h1{
             border-radius: 15px;
             border-color: yellow;
             border-style: solid;
@@ -25,7 +25,7 @@
             text-align: center;
             font-family: Arial, Helvetica, sans-serif;
         }
-        grid-container{
+        .grid-container{
             display: grid;
             background-color: orangered;
             grid-template-columns: auto auto auto;
