--- a/mi pagina web (practica 1-0) (practica 1-1)/index.html
+++ b/mi pagina web (practica 1-0) (practica 1-1)/index.html
@@ -6,9 +6,7 @@
     <title>mi pagina web (practica 1-1)</title>
     <style>
         body{
-            width: 50%;
-            display: grid;
-            justify-items: center;
+            align-content: center;
         }
         p{
             text-align: center;
