--- a/biografia (practica 1-2)/biografia.html
+++ b/biografia (practica 1-2)/biografia.html
@@ -6,52 +6,70 @@
     <title>Mi perfil (practica 1-2)</title>
     <style>
         body{
-             width: 50%;
              display: grid;
+             justify-content: center;
+             align-items: center;
+             margin: 0;
+             height: 100vh;
          }
-         p{
-             text-align: center;
-         }
-         h3{
-             font-family: Arial, Helvetica, sans-serif;
-         }
+
          h1{
              font-size: 2em;
              text-align: center;
              border-style: solid;
              box-sizing: border-box;
-             width: 59%;
+             width: 100%;
              background-color: aqua;
          }
          h3{
              color: brown;
              border-style: solid;
              box-sizing: border-box;
-             width: 59%;
+             font-size: 40px;
+             margin-bottom: 5%;
+             width: 100%;
              padding: 2%;
+             font-family: Arial, Helvetica, sans-serif;
              background-color: rgb(245, 188, 188);
              text-align: center;
          }
          .grid-container{
              display: grid;
              font-family: Arial, Helvetica, sans-serif;
-             grid-template-columns: auto auto auto;
-             grid-template-rows: 4%;
-             border-style: solid;
+             grid-template-columns: repeat(3, 1fr);
+             grid-template-rows: 19px;
+             margin-bottom: 2%;
+             width: 99%;
+             height: 59%;
+             border: 2px solid black;
+             background-color: rgb(245, 188, 188);
              text-align: center;
              font-size: larger;
          }
-     </style>
+
+         a{
+            color: blue;
+         }
+
+         #perfil{
+             text-align: center;
+         }
+         img{
+            max-width: 100%;
+            height: auto;
+         }
+    </style>
 </head>
 <body style="background-color: beige; width: 50%;">
 
+ 
  <h1 style="color: blue;">PERFIL LABORAL</h1>
 
- <img 
-      src="perfil.jpg" 
-      alt="foto de perfil"
-      width="400"
-      height="400"/>
+ 
+ <div class="perfil">
+     <img src="perfil.jpg" alt="foto-de-perfil" width="1000" height="1000">
+ </div>
+
 
  <div>
     <h3>Nombre: Ignacio.</h3> 
@@ -60,7 +78,7 @@
 
     <h3>Localidad: CABA, Argentina.</h3>
 
-    <h3> Ocupacion: esrudiante en formacion profesional. </h3>
+    <h3> Ocupacion: estudiante en formacion profesional. </h3>
 
     <h3> Nivel educativo: Secundario Completo.</h3>
 
